--- a/CNPMNC1/CNPMNC1.csproj
+++ b/CNPMNC1/CNPMNC1.csproj
@@ -273,9 +273,9 @@
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\DangkyDangnhapController.cs" />
     <Compile Include="Controllers\giohangController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\SanPhamController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -340,6 +340,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Views\DangkyDangnhap\" />
     <Folder Include="Views\giohang\" />
   </ItemGroup>
   <ItemGroup>
