--- a/CNPMNC1/packages.config
+++ b/CNPMNC1/packages.config
@@ -7,29 +7,50 @@
   <package id="FireSharp" version="2.0.4" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="jQuery.Validation" version="1.17.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.Core" version="2.2.4" targetFramework="net472" />
+  <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.4" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net472" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.1.2" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.1.2" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.9" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.Internal" version="7.0.12" targetFramework="net472" />
+  <package id="Microsoft.AspNetCore.Cryptography.KeyDerivation" version="7.0.12" targetFramework="net472" />
   <package id="Microsoft.Bcl" version="1.1.9" targetFramework="net472" />
   <package id="Microsoft.Bcl.Async" version="1.0.168" targetFramework="net472" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Identity.Core" version="7.0.12" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="7.0.0" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Options" version="7.0.1" targetFramework="net472" />
+  <package id="Microsoft.Extensions.Primitives" version="7.0.0" targetFramework="net472" />
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="3.2.11" targetFramework="net472" />
   <package id="Microsoft.Net.Http" version="2.2.28" targetFramework="net472" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net472" />
   <package id="Microsoft.NETCore.Portable.Compatibility" version="1.0.1" targetFramework="net472" />
+  <package id="Microsoft.Owin" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security" version="4.2.2" targetFramework="net472" />
+  <package id="Microsoft.Owin.Security.Cookies" version="4.2.2" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Win32.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
   <package id="NETStandard.Library" version="1.6.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Owin" version="1.0" targetFramework="net472" />
   <package id="System.AppContext" version="4.1.0" targetFramework="net472" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Collections" version="4.0.11" targetFramework="net472" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net472" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net472" />
   <package id="System.Console" version="4.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.Debug" version="4.0.11" targetFramework="net472" />
-  <package id="System.Diagnostics.DiagnosticSource" version="4.0.0" targetFramework="net472" />
+  <package id="System.Diagnostics.DiagnosticSource" version="7.0.0" targetFramework="net472" />
   <package id="System.Diagnostics.Tools" version="4.0.1" targetFramework="net472" />
   <package id="System.Diagnostics.Tracing" version="4.1.0" targetFramework="net472" />
   <package id="System.Globalization" version="4.0.11" targetFramework="net472" />
@@ -41,15 +62,18 @@
   <package id="System.IO.FileSystem.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.Linq" version="4.1.0" targetFramework="net472" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Net.Http" version="4.1.0" targetFramework="net472" />
   <package id="System.Net.Primitives" version="4.0.11" targetFramework="net472" />
   <package id="System.Net.Sockets" version="4.1.0" targetFramework="net472" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.ObjectModel" version="4.0.12" targetFramework="net472" />
   <package id="System.Reflection" version="4.1.0" targetFramework="net472" />
   <package id="System.Reflection.Extensions" version="4.0.1" targetFramework="net472" />
   <package id="System.Reflection.Primitives" version="4.0.1" targetFramework="net472" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net472" />
   <package id="System.Runtime" version="4.1.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net472" />
   <package id="System.Runtime.Handles" version="4.0.1" targetFramework="net472" />
   <package id="System.Runtime.InteropServices" version="4.1.0" targetFramework="net472" />
@@ -64,8 +88,11 @@
   <package id="System.Text.RegularExpressions" version="4.1.0" targetFramework="net472" />
   <package id="System.Threading" version="4.0.11" targetFramework="net472" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
   <package id="System.Threading.Timer" version="4.0.1" targetFramework="net472" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net472" />
   <package id="System.Xml.ReaderWriter" version="4.0.11" targetFramework="net472" />
   <package id="System.Xml.XDocument" version="4.0.11" targetFramework="net472" />
+  <package id="WebApiCorrelator" version="1.1.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
